# arox

./: .arox.config.toml  .gitignore  CLAUDE.md  README.md  agents.md  mkdocs.yml  pyproject.toml
arox/: config.py  skills.py
arox/agent_patterns/: __init__.py  capability.py  chat.py  composer.py  example_parser.py  hooks.py  llm_base.py  plugin.py  state.py
arox/apps/: compaction.py  git_commit.py  hooks.py
arox/apps/coder/: config.toml  config.yaml  examples.yaml  main.py
arox/codebase/: file_edit.py  project.py
arox/commands/: __init__.py  manager.py  tool_adapter.py
arox/compose/: __init__.py  composer.py  git_commit.py  hooks.py
arox/compose/coder/: config.toml  examples.yaml  feishu.py  main.py  rest_api.py  state.py  telegram.py  ui.py
arox/core/: __init__.py  app.py  chat.py  composer.py  config.py  hooks.py  llm_base.py  session.py
arox/plugins/: __init__.py  capabilities.py  core.py  file.py  project.py  repo.py  shell.py
arox/tools/: __init__.py  file_edit.py  search_reading.py  shell.py
arox/ui/: __init__.py  bot_base.py  io.py  text_io.py  vercel_ai.py
arox/ui/demo/: __init__.py
arox/utils/: __init__.py
docs/: architecture.md  development.md  index.md  philosophy.md
docs/apps/: coder.md
tests/: conftest.py
tests/functional/: rewrite.toml  test_rewrite.py
tests/unit/: test_config.py  test_rewrite.py  test_skills.py  test_utils.py
tests/unit/agent_patterns/: test_chat.py  test_llm_base.py  test_skills.py
tests/unit/codebase/: test_file_edit.py
tests/unit/core/: test_chat.py  test_llm_base.py  test_session.py  test_skills.py
tests/unit/tools/: test_file_edit.py
tools/: lint
tools/mcp_servers/: .gitignore  config.json  docker-compose.yml
tools/mcp_servers/docker-files/aggregator/: Dockerfile
tools/mcp_servers/docker-files/craw4ai/: Dockerfile  mcp.patch
