[project]
name = "arox"
version = "0.0.1"
authors = [
    {name="fangzhen", email="fangzhen@live.com"},
]
description = "Flexible LLM-based Agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic_ai",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "asyncio",
    "GitPython>=3.1.30",
    "textual>=5.0",
    "anyio>=4.9.0",
    "logfire>=4.16.0",
    "rapidfuzz>=3.14.3",
    "fastmcp>=2.14.2",
    "fastapi>=0.128.6",
]
[project.urls]
Homepage = "https://github.com/Arocial/arox"

[project.scripts]
arox-coder = "arox.compose.coder.main:main"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "textual-dev",
    "textual-key-recorder",
    "remote-pdb",
]
