[project]
name = "arox"
version = "0.0.1"
authors = [
    {name="fangzhen", email="fangzhen@live.com"},
]
description = "Flexible LLM-based Agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic_ai",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "asyncio",
    "GitPython>=3.1.30",
    "anyio>=4.9.0",
    "logfire>=4.16.0",
    "rapidfuzz>=3.14.3",
    "fastmcp>=2.14.2",
    "fastapi>=0.128.6",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "python-telegram-bot>=21.0",
    "lark-oapi>=1.5.3",
]
[project.urls]
Homepage = "https://github.com/Arocial/arox"

[project.scripts]
arox-coder = "arox.compose.coder.main:main"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "pytest-profiling>=1.8.1",
    "remote-pdb",
]
