[project]
name = "arox"
version = "0.0.1"
authors = [
    {name="fangzhen", email="fangzhen@live.com"},
]
description = "Flexible LLM-based Agents"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic_ai",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "asyncio",
    "GitPython>=3.1.30",
    "anyio>=4.9.0",
    "logfire>=4.16.0",
    "rapidfuzz>=3.14.3",
    "fastmcp>=2.14.2",
    "fastapi>=0.128.6",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "python-telegram-bot>=21.0",
    "lark-oapi>=1.5.3",
]
[project.urls]
Homepage = "https://github.com/Arocial/arox"

[project.scripts]
arox-coder = "arox.apps.coder.main:main"

[project.entry-points."arox.agents"]
chat = "arox.agent_patterns.chat:ChatAgent"
git_commit = "arox.apps.git_commit:GitCommitAgent"
compaction = "arox.apps.compaction:CompactionAgent"

[project.entry-points."arox.io_adapters"]
text_io = "arox.ui.text_io:TextIOAdapter"

[project.entry-points."arox.commands"]
project = "arox.commands:ProjectCommand"
model = "arox.commands:ModelCommand"
invoke_tool = "arox.commands:InvokeToolCommand"
list_tool = "arox.commands:ListToolCommand"
reset = "arox.commands:ResetCommand"
info = "arox.commands:InfoCommand"
commit = "arox.commands:CommitCommand"
compaction = "arox.commands:CompactionCommand"

[project.entry-points."arox.hooks"]
auto_compaction = "arox.apps.hooks:auto_compaction_hook"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "pytest-profiling>=1.8.1",
    "remote-pdb",
]
